cabal-version:       >=1.10

name:                haskell-quoridor
version:             1.0
description:         Coursework 1 for Reasoning and Agents 2021 (University of Edinburgh).
author:              Ramon Fernandez Mir & Bartosz Dzionek
maintainer:          Ramon Fernandez Mir <rfernandezmir@gmail.com> & Bartosz Dzionek <s1979360@ed.ac.uk>
build-type:          Simple
extra-source-files:  README.md

library 
  exposed-modules:
    Action, 
    Board, 
    Cell, 
    Constants, 
    Game, 
    Player, 
    Print, 
    Types, 
    Players.Human, 
    Players.Dumb,
    Players.Minimax, 
    Players.Reed,
    AStar
  build-depends:
    base >=4.13,
    containers,
    array,
    heaps
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable haskell-quoridor
  main-is:
    Main.hs
  build-depends:
    base >=4.13,
    haskell-quoridor,
    containers,
    array,
    MonadRandom,
    heaps
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite basic-tests
  type:                
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    tests/Basic
  build-depends: 
    base >=4.13,
    containers,
    haskell-quoridor,
    hspec,
    hspec-discover,
    hspec-contrib,
    HUnit,
    QuickCheck,
    heaps
  default-language:
    Haskell2010

test-suite minimax-tests
  type:                
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    tests/Minimax
  build-depends: 
    base >=4.13,
    containers,
    haskell-quoridor,
    hspec,
    hspec-discover,
    hspec-contrib,
    HUnit,
    QuickCheck,
    heaps
  default-language:
    Haskell2010

test-suite extension-tests
  type:                
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    tests/Extension
  build-depends: 
    base >=4.13,
    containers,
    haskell-quoridor,
    hspec,
    hspec-discover,
    hspec-contrib,
    HUnit,
    QuickCheck,
    heaps
  default-language:
    Haskell2010